fix: ScrollTrigger making scrollbar visible

--- a/vue/src/styles/app.scss
+++ b/vue/src/styles/app.scss
@@ -39,7 +39,11 @@
 html {
     font-size: 16px;
 
-    overflow-x: hidden !important;
+    overflow: hidden !important;
+}
+
+main {
+    overflow-y: hidden !important;
 }
 
 body {
